# boys

./: .dir-locals.el  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  flake.nix
.github/workflows/: ci.yml  docker.yml  nix.yml  pre-commit.yml  test.yml  zizmor.yml
benches/: boys_benchmark.rs
src/: lib.rs
src/exact/: mod.rs
src/jeffhammond/: mod.rs
src/micb25/: data.rs  mod.rs
tests/: integration_test.rs
