[package]
name = "boys"
version = "0.1.1"
authors = ["Eric Berquist <eric.berquist@gmail.com>"]
description = "Different algorithms for calculating the Boys function"
repository = "https://github.com/berquist/boys"
license = "LGPL3"
readme = "README.md"
categories = ["science"]
keywords = ["Chemistry"]
edition = "2018"

[dependencies]
GSL = "7.0.0"

[dev-dependencies]
criterion = "=0.7.0"

[[bench]]
name = "boys_benchmark"
harness = false

[lints.rust]
invalid_reference_casting = "deny"
unknown-lints = "deny"
# warnings = "deny"

[lints.clippy]
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
char_lit_as_u8 = "deny"
fn_to_numeric_cast = "deny"
fn_to_numeric_cast_with_truncation = "deny"
ptr_as_ptr = "deny"
unnecessary_cast = "deny"
