[package]
name = "boys"
version = "0.1.1"
authors = ["Eric Berquist <eric.berquist@gmail.com>"]
description = "Different algorithms for calculating the Boys function"
repository = "https://github.com/berquist/boys"
license = "LGPL3"
readme = "README.md"
categories = ["science"]
keywords = ["Chemistry"]
edition = "2024"

[dependencies]
GSL = "7.0.0"
typed_floats = "1.0.6"

[dev-dependencies]
criterion = "=0.7.0"

[[bench]]
name = "boys_benchmark"
harness = false

[lints.rust]
invalid_reference_casting = "deny"
unknown-lints = "deny"
# warnings = "deny"

[lints.clippy]
# The individual components of `as_conversion`
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
char_lit_as_u8 = "deny"
fn_to_numeric_cast = "deny"
fn_to_numeric_cast_with_truncation = "deny"
ptr_as_ptr = "deny"
unnecessary_cast = "deny"

linkedlist = "deny"
lossy_float_literal = "deny"
macro_use_imports = "deny"
main_recursion = "deny"
manual_abs_diff = "deny"
manual_assert = "deny"
manual_async_fn = "deny"
manual_bits = "deny"
manual_c_str_literals = "deny"
manual_clamp = "deny"
manual_contains = "deny"
manual_dangling_ptr = "deny"
manual_div_ceil = "deny"
manual_filter = "deny"
manual_filter_map = "deny"
manual_find = "deny"
manual_find_map = "deny"
manual_flatten = "deny"
manual_hash_one = "deny"
manual_ignore_case_cmp = "deny"
manual_inspect = "deny"
manual_instant_elapsed = "deny"
manual_is_ascii_check = "deny"
manual_is_finite = "deny"
manual_is_infinite = "deny"
# 1.89.0
# manual_is_multiple_of = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_main_separator_str = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_midpoint = "deny"
