[package]
name = "boys"
version = "0.1.1"
authors = ["Eric Berquist <eric.berquist@gmail.com>"]
description = "Different algorithms for calculating the Boys function"
repository = "https://github.com/berquist/boys"
license = "LGPL3"
readme = "README.md"
categories = ["science"]
keywords = ["Chemistry"]
edition = "2018"

[dependencies]
GSL = "7.0.0"

[dev-dependencies]
criterion = "=0.8.0"

[[bench]]
name = "boys_benchmark"
harness = false

[lints.rust]
invalid_reference_casting = "deny"
unknown-lints = "deny"
# warnings = "deny"

[lints.clippy]
# The individual components of `as_conversion`
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
char_lit_as_u8 = "deny"
fn_to_numeric_cast = "deny"
fn_to_numeric_cast_with_truncation = "deny"
ptr_as_ptr = "deny"
unnecessary_cast = "deny"

absolute_paths = "deny"
allow_attributes = "deny"
# allow_attributes_without_reason
almost_complete_range = "deny"
arbitrary_source_item_ordering = "allow"
arc_with_non_send_sync = "deny"
# There are a number of indexing locations where checked addition and
# multiplication could be used, but they are for static arrays; the indexing
# will fail before overflow occurs.
arithmetic_side_effects = "allow"
as_pointer_underscore = "deny"
as_underscore = "deny"
assertions_on_constants = "deny"
assertions_on_result_states = "deny"
assign_op_pattern = "deny"
assigning_clones = "deny"
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
big_endian_bytes = "deny"
bind_instead_of_map = "deny"
blanket_clippy_restriction_lints = "deny"
blocks_in_conditions = "deny"
bool_assert_comparison = "deny"
bool_comparison = "deny"
bool_to_int_with_if = "deny"
borrow_as_ptr = "deny"
borrow_deref_ref = "deny"
borrow_interior_mutable_const = "deny"
borrowed_box = "deny"
box_collection = "deny"
box_default = "deny"
boxed_local = "deny"
builtin_type_shadow = "deny"
byte_char_slices = "deny"
bytes_count_to_len = "deny"
bytes_nth = "deny"
cargo_common_metadata = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_abs_to_unsigned = "deny"
cast_enum_constructor = "deny"
cast_enum_truncation = "deny"
cast_nan_to_int = "deny"
cast_ptr_alignment = "deny"
cast_slice_from_raw_parts = "deny"
cfg_not_test = "deny"
chars_last_cmp = "deny"
chars_next_cmp = "deny"
checked_conversions = "deny"
clone_on_copy = "deny"
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
cmp_null = "deny"
cmp_owned = "deny"
collapsible_else_if = "deny"
collapsible_if = "deny"
collapsible_match = "deny"
collapsible_str_replace = "deny"
comparison_chain = "deny"
comparison_to_empty = "deny"
const_is_empty = "deny"
copy_iterator = "deny"
crate_in_macro_def = "deny"
create_dir = "deny"
crosspointer-transmute = "deny"
dbg_macro = "deny"
# decimal_literal_representation
declare_interior_mutable_const = "deny"
default_constructed_unit_structs = "deny"
default_instead_of_iter_empty = "deny"
default_numeric_fallback = "deny"
default_trait_access = "deny"
default_union_representation = "deny"
deprecated_cfg_attr = "deny"
deprecated_clippy_cfg_attr = "deny"
deref_addrof = "deny"
deref_by_slicing = "deny"
derivable_impls = "deny"
diverging_sub_expression = "deny"
doc_comment_double_space_linebreaks = "deny"
doc_include_without_cfg = "deny"
doc_lazy_continuation = "deny"
doc_link_with_quotes = "deny"
doc_markdown = "deny"
doc_nested_refdefs = "deny"
doc_overindented_list_items = "deny"
double_comparisons = "deny"
double_ended_iterator_last = "deny"
double_must_use = "deny"
double_parens = "deny"
drain_collect = "deny"
drop_non_drop = "deny"
duplicate_mod = "deny"
duplicate_underscore_argument = "deny"
duplicated_attributes = "deny"
duration_subsec = "deny"
elidable_lifetime_names = "deny"
else_if_without_else = "deny"
empty_docs = "deny"
empty_drop = "deny"
empty_enum = "deny"
empty_enum_variants_with_brackets = "deny"
empty_line_after_doc_comments = "deny"
empty_line_after_outer_attr = "deny"
empty_loop = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
enum_variant_names = "deny"
err_expect = "deny"
error_impl_error = "deny"
excessive_nesting = "deny"
excessive_precision = "deny"
exhaustive_enums = "deny"
exhaustive_structs = "deny"
exit = "deny"
expect_fun_call = "deny"
expect_used = "deny"
expl_impl_clone_on_copy = "deny"
explicit_auto_deref = "deny"
explicit_counter_loop = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
explicit_write = "deny"
extend_with_drain = "deny"
extra_unused_lifetimes = "deny"
extra_unused_type_parameters = "deny"
field_reassign_with_default = "deny"
field_scoped_visibility_modifiers = "deny"
filetype_is_file = "deny"
filter_map_bool_then = "deny"
filter_map_identity = "deny"
filter_map_next = "deny"
filter_next = "deny"
flat_map_identity = "deny"
flat_map_option = "deny"
# float_arithmetic
float_cmp = "deny"
float_cmp_const = "deny"
float_equality_without_abs = "deny"
fn_params_excessive_bools = "deny"
fn_to_numeric_cast_any = "deny"
for_kv_map = "deny"
forget_non_drop = "deny"
format_collect = "deny"
format_in_format_args = "deny"
format_push_string = "deny"
four_forward_slashes = "deny"
from_iter_instead_of_collect = "deny"
from_over_into = "deny"
from_raw_with_void_ptr = "deny"
from_str_radix_10 = "deny"
get_first = "deny"
get_last_with_len = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
identity_op = "deny"
if_not_else = "deny"
if_same_then_else = "deny"
if_then_some_else_none = "deny"
ignore_without_reason = "deny"
ignored_unit_patterns = "deny"
impl_trait_in_params = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
implicit_saturating_add = "deny"
implicit_saturating_sub = "deny"
implied_bounds_in_impls = "deny"
incompatible_msrv = "deny"
inconsistent_digit_grouping = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
# TODO
# indexing_slicing = "deny"
ineffective_open_options = "deny"
inefficient_to_string = "deny"
infallible_destructuring_match = "deny"
infinite_loop = "deny"
inherent_to_string = "deny"
init_numbered_fields = "deny"
inline_always = "deny"
inspect_for_each = "deny"
int_plus_one = "deny"
into_iter_on_ref = "deny"
into_iter_without_iter = "deny"
invalid_upcast_comparisons = "deny"
io_other_error = "deny"
is_digit_ascii_radix = "deny"
items_after_statements = "deny"
items_after_test_module = "deny"
iter_cloned_collect = "deny"
iter_count = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
iter_kv_map = "deny"
iter_next_slice = "deny"
iter_not_returning_iterator = "deny"
iter_nth = "deny"
iter_nth_zero = "deny"
iter_out_of_bounds = "deny"
iter_over_hash_type = "deny"
iter_overeager_cloned = "deny"
iter_skip_next = "deny"
iter_without_into_iter = "deny"
join_absolute_paths = "deny"
just_underscores_and_digits = "deny"
large_const_arrays = "deny"
large_digit_groups = "deny"
large_enum_variant = "deny"
large_futures = "deny"
large_include_file = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
legacy_numeric_constants = "deny"
len_without_is_empty = "deny"
len_zero = "deny"
let_and_return = "deny"
let_underscore_future = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
let_unit_value = "deny"
let_with_type_underscore = "deny"
lines_filter_map_ok = "deny"
linkedlist = "deny"
lossy_float_literal = "deny"
macro_use_imports = "deny"
main_recursion = "deny"
manual_abs_diff = "deny"
manual_assert = "deny"
manual_async_fn = "deny"
manual_bits = "deny"
manual_c_str_literals = "deny"
manual_clamp = "deny"
manual_contains = "deny"
manual_dangling_ptr = "deny"
manual_div_ceil = "deny"
manual_filter = "deny"
manual_filter_map = "deny"
manual_find = "deny"
manual_find_map = "deny"
manual_flatten = "deny"
manual_hash_one = "deny"
manual_ignore_case_cmp = "deny"
manual_inspect = "deny"
manual_instant_elapsed = "deny"
manual_is_ascii_check = "deny"
manual_is_finite = "deny"
manual_is_infinite = "deny"
# 1.89.0
# manual_is_multiple_of = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_main_separator_str = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_midpoint = "deny"
manual_next_back = "deny"
manual_non_exhaustive = "deny"
manual_ok_err = "deny"
manual_ok_or = "deny"
manual_option_as_slice = "deny"
manual_pattern_char_comparison = "deny"
manual_range_contains = "deny"
manual_range_patterns = "deny"
manual_rem_euclid = "deny"
manual_repeat_n = "deny"
manual_retain = "deny"
manual_rotate = "deny"
manual_saturating_arithmetic = "deny"
manual_slice_fill = "deny"
manual_slice_size_calculation = "deny"
manual_split_once = "deny"
manual_str_repeat = "deny"
manual_string_new = "deny"
manual_strip = "deny"
manual_swap = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
manual_unwrap_or_default = "deny"
manual_while_let_some = "deny"
many_single_char_names = "deny"
map_all_any_identity = "deny"
map_clone = "deny"
map_collect_result_unit = "deny"
map_entry = "deny"
map_err_ignore = "deny"
map_flatten = "deny"
map_identity = "deny"
map_unwrap_or = "deny"
map_with_unused_argument_over_ranges = "deny"
match_as_ref = "deny"
match_bool = "deny"
match_like_matches_macro = "deny"
match_overlapping_arm = "deny"
match_ref_pats = "deny"
match_result_ok = "deny"
match_same_arms = "deny"
match_single_binding = "deny"

# nursery
as_ptr_cast_mut = "deny"
branches_sharing_code = "deny"
clear_with_drain = "deny"
# 1.88.0
# coerce_container_to_any = "deny"
cognitive_complexity = "deny"
collection_is_never_read = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
doc_link_code = "deny"
equatable_if_let = "deny"
fallible_impl_from = "deny"
future_not_send = "deny"
imprecise_flops = "deny"
# iter_on_empty_collection = "deny"
iter_on_single_items = "deny"
iter_with_drain = "deny"
large_stack_frames = "deny"
literal_string_with_formatting_args = "deny"
missing_const_for_fn = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
non_send_fields_in_send_ty = "deny"
nonstandard_macro_braces = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"
path_buf_push_overwrite = "deny"
read_zero_byte_vec = "deny"
redundant_clone = "deny"
redundant_pub_crate = "deny"
set_contains_or_insert = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
single_option_map = "deny"
string_lit_as_bytes = "deny"
suboptimal_flops = "deny"
suspicious_operation_groupings = "deny"
too_long_first_doc_paragraph = "deny"
trailing_empty_array = "deny"
trait_duplication_in_bounds = "deny"
transmute_undefined_repr = "deny"
trivial_regex = "deny"
tuple_array_conversions = "deny"
type_repetition_in_bounds = "deny"
uninhabited_references = "deny"
unnecessary_struct_initialization = "deny"
unused_peekable = "deny"
unused_rounding = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
while_float = "deny"
